2010-05-27  Michal Ludvig  <mludvig@logix.net.nz>

	* S3/S3.py: Fix bucket listing for buckets with
	  over 1000 prefixes. (contributed by Timothee Linden)
	* S3/S3.py: Fixed code formating.

2010-05-21  Michal Ludvig  <mludvig@logix.net.nz>

	* s3cmd, S3/S3.py: Added support for bucket locations
	  outside US/EU (i.e. us-west-1 and ap-southeast-1 as of now).

2010-05-21  Michal Ludvig  <mludvig@logix.net.nz>

	* s3cmd, S3/S3.py, S3/Config.py: Added --reduced-redundancy
	  switch for Reduced Redundancy Storage.

2010-05-20  Michal Ludvig  <mludvig@logix.net.nz>

	* s3cmd, S3/ACL.py, S3/Config.py: Support for --acl-grant
	  and --acl-revoke (contributed by Timothee Linden)
	* s3cmd: Couple of fixes on top of the above commit.
	* s3cmd: Pre-parse ACL parameters in OptionS3ACL()

2010-05-20  Michal Ludvig  <mludvig@logix.net.nz>

	* S3/Exceptions.py, S3/S3.py: Some HTTP_400 exceptions 
	  are retriable.

2010-03-19  Michal Ludvig  <mludvig@logix.net.nz>

	* s3cmd, S3/ACL.py: Print all ACLs for a Grantee
	(one Grantee can have multiple different Grant entries)

2010-03-19  Michal Ludvig  <mludvig@logix.net.nz>

	* s3cmd: Enable bucket-level ACL setting
	* s3cmd, S3/AccessLog.py, ...: Added [accesslog] command.
	* s3cmd: Fix imports from S3.Utils

2009-12-10  Michal Ludvig  <mludvig@logix.net.nz>

	* s3cmd: Path separator conversion on Windows hosts.

2009-10-08  Michal Ludvig  <mludvig@logix.net.nz>

	* Released version 0.9.9.91
	  -------------------------

	* S3/PkgInfo.py: Updated to 0.9.9.91
	* NEWS: News for 0.9.9.91

2009-10-08  Michal Ludvig  <mludvig@logix.net.nz>

	* S3/S3.py: fixed reference to _max_retries.

2009-10-06  Michal Ludvig  <mludvig@logix.net.nz>

	* Released version 0.9.9.90
	  -------------------------

	* S3/PkgInfo.py: Updated to 0.9.9.90
	* NEWS: News for 0.9.9.90

2009-10-06  Michal Ludvig  <mludvig@logix.net.nz>

	* S3/S3.py: Introduce throttling on upload only after
	  second failure. I.e. first retry at full speed.