@@ -19,7 +19,7 @@ class Config(object):
 	host_bucket = "%(bucket)s.s3.amazonaws.com"
 	simpledb_host = "sdb.amazonaws.com"
 	cloudfront_host = "cloudfront.amazonaws.com"
-	cloudfront_resource = "/2008-06-30/distribution"
+	cloudfront_resource = "/2010-06-01/distribution"
 	verbosity = logging.WARNING
 	progress_meter = True
 	progress_class = Progress.ProgressCR
